; ModuleID = '/home/carl/AnghaBench/git/refs/extr_iterator.c_prefix_ref_iterator_abort.c'
source_filename = "/home/carl/AnghaBench/git/refs/extr_iterator.c_prefix_ref_iterator_abort.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ref_iterator = type { i32 }
%struct.prefix_ref_iterator = type { i32, i64 }

@ITER_DONE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ref_iterator*)* @prefix_ref_iterator_abort to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @prefix_ref_iterator_abort(%struct.ref_iterator* %0) #0 {
  %2 = alloca %struct.ref_iterator*, align 8
  %3 = alloca %struct.prefix_ref_iterator*, align 8
  %4 = alloca i32, align 4
  store %struct.ref_iterator* %0, %struct.ref_iterator** %2, align 8
  %5 = load %struct.ref_iterator*, %struct.ref_iterator** %2, align 8
  %6 = bitcast %struct.ref_iterator* %5 to %struct.prefix_ref_iterator*
  store %struct.prefix_ref_iterator* %6, %struct.prefix_ref_iterator** %3, align 8
  %7 = load i32, i32* @ITER_DONE, align 4
  store i32 %7, i32* %4, align 4
  %8 = load %struct.prefix_ref_iterator*, %struct.prefix_ref_iterator** %3, align 8
  %9 = getelementptr inbounds %struct.prefix_ref_iterator, %struct.prefix_ref_iterator* %8, i32 0, i32 1
  %10 = load i64, i64* %9, align 8
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %17

12:                                               ; preds = %1
  %13 = load %struct.prefix_ref_iterator*, %struct.prefix_ref_iterator** %3, align 8
  %14 = getelementptr inbounds %struct.prefix_ref_iterator, %struct.prefix_ref_iterator* %13, i32 0, i32 1
  %15 = load i64, i64* %14, align 8
  %16 = call i32 @ref_iterator_abort(i64 %15)
  store i32 %16, i32* %4, align 4
  br label %17

17:                                               ; preds = %12, %1
  %18 = load %struct.prefix_ref_iterator*, %struct.prefix_ref_iterator** %3, align 8
  %19 = getelementptr inbounds %struct.prefix_ref_iterator, %struct.prefix_ref_iterator* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 8
  %21 = call i32 @free(i32 %20)
  %22 = load %struct.ref_iterator*, %struct.ref_iterator** %2, align 8
  %23 = call i32 @base_ref_iterator_free(%struct.ref_iterator* %22)
  %24 = load i32, i32* %4, align 4
  ret i32 %24
}

declare dso_local i32 @ref_iterator_abort(i64) #1

declare dso_local i32 @free(i32) #1

declare dso_local i32 @base_ref_iterator_free(%struct.ref_iterator*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
